# CubicHermiteSpline

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  README.md  README.md~  build_full.sh  index.html  params.json
.github/workflows/: ci.yml
include/CHSpline/: CHSpline.h
src/: CHSpline.cpp  CHSpline.h  CMakeLists.txt  main.cpp
test/: CMakeLists.txt  Coef.stdout  test_CHSpline.cpp
